# tbott2

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
nginx/: Dockerfile  default.conf  nginx.conf
service/app/: admin.py  const.py  models.py
service/app/abot/: atomic.py  bot.py  keyboards.py  uorder.py
service/app/abot/handlers/: cart_router.py  main_router.py  profile_router.py
service/app/management/commands/: tbot.py  works.py
service/app/migrations/: 0001_initial.py  0002_product_image.py  0003_remove_product_img_path.py  0004_cart_is_paid.py  0005_user_address_user_full_name_user_phone_number.py  0006_remove_cart_is_paid_payment_cart_payment.py
service/dfiles/: Dockerfile  Dockerfile.abot  Dockerfile.works
service/service/: settings.py
service/shs/: abot.sh  ex.sh  works.sh
