[tool.poetry]
name = "tbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
aiogram = "^3.18.0"
pillow = "^11.1.0"
ipython = "^9.0.1"
geopy = "^2.4.1"
openpyxl = "^3.1.5"
isort = "^6.0.1"
psycopg2 = "^2.9.10"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
